@@ -1,6 +1,11 @@
 # ChangeLog for dev-ruby/dust
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/dust/ChangeLog,v 1.12 2013/07/08 18:37:23 graaff Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/dust/ChangeLog,v 1.13 2013/10/09 01:54:45 mrueg Exp $
+
+*dust-0.1.7-r1 (09 Oct 2013)
+
+  09 Oct 2013; Manuel Rüger <mrueg@gentoo.org> +dust-0.1.7-r1.ebuild:
+  Add ruby20 target.
 
   08 Jul 2013; Hans de Graaff <graaff@gentoo.org> -dust-0.1.6-r1.ebuild:
   Cleanup.
